# Generic-Markov-Chain

./: CMakeLists.txt  README.md  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
